Agrego todos los pokemons iniciales, asi q funciona como una pokedex